--- a/fpl-tool/package.json
+++ b/fpl-tool/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.3.6",
     "classnames": "^2.5.1",
     "mobx": "^6.15.0",
+    "mobx-react-lite": "^4.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "zod": "^4.2.1"
